data/derived/sp14/progs/unify/prog4811.ml.out
Characters 78-89:
  let f a x = sepConcat h^sep t in
              ^^^^^^^^^^^
Error: This expression has type 'a list -> string
       but an expression was expected of type string
